# depthest

./: CMakeLists.txt  README.md  package.xml  rviz_config.rviz
calibration/: ardroneCamera.yaml
include/: CalibrationConfiguration.h  CalibrationLoader.h  Params.h
include/DepthEstimation/: DepthEstimatorFactory.h
include/DepthEstimation/DepthEstimators/: DepthEstimator.h  FilterDepthEstimator.h  NoFilteringDepthEstimator.h
include/DepthEstimation/NodeHandles/: DepthEstimationNode.h
include/EstimatorMaps/: KalmanFilterEstimatorPointMap.h  MedianEstimatorPointMap.h
include/EstimatorMaps/Estimators/: DummyEstimator.h  KalmanFilterEstimator.h  MedianEstimator.h  PositionEstimator.h
include/Evaluation/: ErrorCalc.h
include/PositionFilterMaps/: PoseFilterMap.h  PositionFilterMap.h
include/PositionFilterMaps/PoseFilters/: PoseChangeFilter.h  PositionFilter.h
include/Remapping/: PoseRemaper.h
include/depthest/: Flow.h  FlowArrayStamped.h  FlowArrayStampedAged.h  ObjectsStamped.h  Point2D.h  Point2DAged.h  PointsStamped.h  PoseAndPointsStamped.h
include/vizualizer/: DepthVisualizer.h
launch/: depthest.launch  depthest3.launch  depthest_bag.launch
msg/: FlowArrayStampedAged.msg  Point2DAged.msg  PoseAndPointsStamped.msg
src/: CalibrationConfiguration.cpp  CalibrationLoader.cpp  Camera.cpp  Camera.h  HelperFunctions.h  Params.cpp
src/DepthEstimation/: DepthEstimatorFactory.cpp  DepthEstimatorFactory.h  Depthes.cpp
src/DepthEstimation/DepthEstimators/: FilterDepthEstimator.cpp  FilterDepthEstimator.h  NoFilteringDepthEstimator.cpp  NoFilteringDepthEstimator.h
src/DepthEstimation/NodeHandles/: DepthEstimationNode.cpp  DepthEstimationNode.h
src/EstimatorMaps/: DummyEstimatorPointMap.cpp  DummyEstimatorPointMap.h  EstimatorPointMap.h  EstimatorPointMapFactory.cpp  EstimatorPointMapFactory.h  KalmanFilterEstimatorPointMap.cpp  MedianEstimatorPointMap.cpp  MedianSWEstimatorPointMap.cpp  MedianSWEstimatorPointMap.h
src/EstimatorMaps/Estimators/: DummyEstimator.cpp  DummyEstimator.h  KalmanFilterEstimator.cpp  KalmanFilterEstimator.h  MedianEstimator.cpp  MedianEstimator.h  MedianSWEstimator.cpp  MedianSWEstimator.h  PositionEstimator.h
src/Evaluation/: ErrorCalc.cpp
src/PositionFilterMaps/: PoseChangeFilterMap.cpp  PoseChangeFilterMap.h  PoseFilterMap.h  PositionFilterMap.cpp  PositionFilterMapFactory.cpp  PositionFilterMapFactory.h  SWPoseChangeFilterMap.cpp  SWPoseChangeFilterMap.h  SWPoseFilterMap.cpp  SWPoseFilterMap.h
src/PositionFilterMaps/PoseFilters/: PoseChangeFilter.cpp  PoseChangeFilter.h  PoseFilter.cpp  PoseFilter.h  PositionFilter.h  SWPoseChangeFilter.cpp  SWPoseChangeFilter.h  SWPoseFilter.cpp  SWPoseFilter.h
src/Remapping/: ImageRemaper.cpp  ImageRemaper.h  PoseRemaper.cpp  Remaper.cpp
src/vizualizer/: DepthVisualizer.cpp  DepthVisualizer.h  ReprojectionVisualizer.cpp  ReprojectionVisualizer.h  Visualizer.cpp  Visualizer3D.cpp  Visualizer3D.h
